--- a/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
+++ b/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#  **RSNA 2023 : Rapid deployment 'How-To'** \n\n",
     "### Demonstration for annual meeting educational exhibit INEE-47\n",
-    "### *Rapid clinical deployment of AI applications for Radiology using Mercure -\n an open source DICOM orchestration platform* \n",
+    "### *Rapid clinical deployment of AI applications for Radiology using Mercure* -\n *an open source DICOM orchestration platform* \n",
     "\n",
     "This notebook contains a demonstration of how to rapidly deploy a spleen segmentation model using [Mercure](https://mercure-imaging.org) - a DICOM orchestration platform, and forms part of edcucational exhibit INEE-47 at RSNA 2023 annual meeting. A MONAI CT spleen segmentation model will be deployed from the MONAI [model zoo](https://monai.io/model-zoo.html) using mercure in six simple steps. This demonstration includes instructions on how to quickly set up a test installation of Mercure in a virtual environment with [virtual box](https://www.virtualbox.org/) and [vagrant](https://www.vagrantup.com/). Next, we will step through how to deploy and configure a spleen segmentation app ( based on a [previous tutorial](https://docs.monai.io/projects/monai-deploy-app-sdk/en/latest/notebooks/tutorials/06_monai_bundle_app.html) ) to receive and process files using Mercure. Finally, we will test the deployed app by sending open-source data and viewing segmentation results.\n",
     "\n",
