--- a/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
+++ b/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  **RSNA 2023 : Rapid deployment 'How-To'** \n\n",
+    "#  **RSNA 2023 : Rapid deployment 'How-To'** \n",
+    "#  \n",
     "### Demonstration for annual meeting educational exhibit INEE-47\n",
     "### *Rapid clinical deployment of AI applications for Radiology using Mercure* -\n ### *an open source DICOM orchestration platform* \n",
     "\n",
