--- a/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
+++ b/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
@@ -514,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congratulations, you have successfully installed Mercure and deployed the mercure-monaisegment module that can receive DICOM images, perform segmentation of the spleen, and send results to PACS for viewing. \n",
+    "**Congratulations, you have successfully installed Mercure and deployed the mercure-monaisegment module that can receive DICOM images, perform segmentation of the spleen, and send results to PACS for viewing.** \n",
     "\n",
     "More information can be found [here](www.mercure-imaging.org) on how to setup and configure Mercure for your specific DICOM orchestration requirements. There is also a chat feature on this website for questions not covered in the documentation or to report software issues and bugs. \n",
     "\n",
