--- a/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
+++ b/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
@@ -15,6 +15,7 @@
     "- Python installed (2.7 | 3.5 | 3.6 | 3.7 | 3.8 | 3.9).\n",
     "- Git installed.\n",
     "- VirtualBox and Vagrant installed (see below )."
+    "- Offis DCMTK installed, available [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/)"
    ]
   },
   {
