--- a/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
+++ b/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
@@ -14,7 +14,7 @@
     "- Notebook is Linux/macOS/Windows compatible and needs to be downloaded and run locally.\n",
     "- Python installed (2.7 | 3.5 | 3.6 | 3.7 | 3.8 | 3.9).\n",
     "- Git installed.\n",
-    "- VirtualBox and Vagrant installed (see below )."
+    "- VirtualBox and Vagrant installed (see below ).",
     "- Offis DCMTK installed, available [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/)"
    ]
   },
