--- a/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
+++ b/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### Requirements\n",
     "- Notebook is Linux/macOS/Windows compatible and needs to be downloaded and run locally.\n",
-    "- Python installed (2.7 | 3.5 | 3.6 | 3.7 | 3.8 | 3.9).\n",
+    "- Python installed (2.7 | 3.5 | 3.6 | 3.7 | 3.8 | 3.9) - we recommend installing with jupyter notebooks using [anaconda](https://www.anaconda.com/download).\n",
     "- Git installed.\n",
     "- VirtualBox and Vagrant installed (see below ).\n",
     "- Offis DCMTK installed, available [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/)"
