--- a/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
+++ b/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mercure should now be running inside a virtual machine and accessible from your host computer. To view the Mercure login screen open address [127.0.0.1:8000](http://127.0.0.1:8000/). \n",
+    "Mercure should now be running inside a virtual machine and accessible from your host computer. To view the Mercure login screen open address [127.0.0.1:8000](http://127.0.0.1:8000/) in a web browser. \n",
     "The credentials for first login are : **Username = admin, Password = router**. A prompt to add email contact and change password will follow."
    ]
   },
