fix typos, small clarifications.

--- a/RSNA_HowTo.ipynb
+++ b/RSNA_HowTo.ipynb
@@ -18,14 +18,15 @@
    "source": [
     "\n",
     "\n",
-    "This notebook contains a demonstration of how to rapidly deploy a spleen segmentation model using [Mercure](https://mercure-imaging.org) - a DICOM orchestration platform, and forms part of edcucational exhibit INEE-47 at RSNA 2023 annual meeting. A [MONAI](https://monai.io/) **CT spleen segmentation model** will be deployed from the MONAI [model zoo](https://monai.io/model-zoo.html) using **mercure** in **six simple steps**. This demonstration includes instructions on how to quickly set up a test installation of Mercure in a virtual environment with [virtual box](https://www.virtualbox.org/) and [vagrant](https://www.vagrantup.com/). Next, we will step through how to deploy and configure a spleen segmentation app ( based on a [previous tutorial](https://docs.monai.io/projects/monai-deploy-app-sdk/en/stable/getting_started/tutorials/monai_bundle_app.html) provided by MONAI ) to receive and process files using Mercure. Finally, we will test the deployed app by sending open-source data and viewing segmentation results.\n",
+    "This notebook contains a demonstration of how to rapidly deploy a spleen segmentation model using [Mercure](https://mercure-imaging.org) - a DICOM orchestration platform, and forms part of educational exhibit INEE-47 at RSNA 2023 annual meeting. A [MONAI](https://monai.io/) **CT spleen segmentation model** will be deployed from the MONAI [model zoo](https://monai.io/model-zoo.html) using **mercure** in **six simple steps**. This demonstration includes instructions on how to quickly set up a test installation of Mercure in a virtual environment with [VirtualBox](https://www.virtualbox.org/) and [vagrant](https://www.vagrantup.com/). Next, we will step through how to deploy and configure a spleen segmentation app (based on a [previous tutorial](https://docs.monai.io/projects/monai-deploy-app-sdk/en/stable/getting_started/tutorials/monai_bundle_app.html) provided by MONAI) to receive and process files using Mercure. Finally, we will test the deployed app by sending open-source data and viewing segmentation results.\n",
     "\n",
     "### Requirements\n",
     "- Notebook is Linux/macOS/Windows compatible and needs to be downloaded and run locally.\n",
     "- Python installed (2.7 | 3.5 | 3.6 | 3.7 | 3.8 | 3.9) - we recommend installing with jupyter notebooks using [anaconda](https://www.anaconda.com/download).\n",
     "- Git installed.\n",
-    "- VirtualBox and Vagrant installed (see below ).\n",
-    "- Offis DCMTK installed, available [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/)"
+    "- VirtualBox and Vagrant installed (see below).\n",
+    "- Offis DCMTK installed, available [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/) \n",
+    "- Roughly 22 GB of free disk space."
    ]
   },
   {
@@ -41,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Install Virtual Box and Vagrant\n",
+    "### 1.1 Install VirtualBox and Vagrant\n",
     "\n",
     "Vagrant is an open-source tool for automatically creating and provisioning virtual machines. It is used in in this tutorial to simplify Mercure installation and setup. To begin, install VirtualBox followed by Vagrant at the links provided below :\n",
     "\n",
@@ -73,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Navigate to 'systemd' subdirectory of Mercure repository and install Mercure with vagrant. This step may take a few minutes (~20 mins) and will generate lots of output. The open-source Orthanc PACS and DICOM viewer will be installed so we can view our results later.\n",
+    "Navigate to 'systemd' subdirectory of Mercure repository and install Mercure with vagrant. This step may take a few minutes (~20 mins) and will generate lots of output. The open-source Orthanc PACS server and a web-based DICOM viewer will be installed inside the virtual machine as well so we can view our results later.\n",
     "<br>\n",
     "\n",
     "**Important:** Following commands must be run with **administrator privileges.**"
@@ -95,7 +96,7 @@
    "metadata": {},
    "source": [
     "Mercure should now be running inside a virtual machine and accessible from your host computer. To view the Mercure login screen open address [127.0.0.1:8000](http://127.0.0.1:8000/) in a web browser. \n",
-    "The credentials for first login are : **Username = admin, Password = router**. A prompt to add email contact and change password will follow."
+    "The credentials for first login are: **Username = admin, Password = router**. A prompt to add email contact and change password will follow."
    ]
   },
   {
@@ -237,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check that you can open the Orthanc interface (Username = orthanc, Password = orthanc) in a web browser at the following address :\n",
+    "Check that you can open the Orthanc interface (Username = orthanc, Password = orthanc) in a web browser at the following address:\n",
     "\n",
     "Orthanc: [127.0.0.1:8042](http://127.0.0.1:8042)\n"
    ]
@@ -269,7 +270,7 @@
    "source": [
     "To simplify deployment of the MONAI segmentation bundle, a Docker image has been created to run this application as a module in Mercure. This module is named 'mercure-monaisegment' and has been made available on Dockerhub. We will use this prebuilt Docker image in this deployment, if you  are interested in the code for this module, please visit this [address.](https://github.com/mercure-imaging/mercure-monaisegment) \n",
     "\n",
-    "Add this module to the Mercure installation by selecting the 'modules' page and clicking '+ Install Module' Button. Provide a name for the module, enter the Docker tag for the mercure-monaisegment module as shown below (mercureimaging/mercure-monaisegment), and click 'Install'."
+    "Add this module to the Mercure installation by selecting the 'Modules' page and clicking '+ Install Module' Button. Provide a name for the module, enter the Docker tag for the mercure-monaisegment module as shown below (mercureimaging/mercure-monaisegment), and click 'Install'. Note that *Module Type* must be 'mercure' in this case (the default setting)."
    ]
   },
   {
