markdown blockquote for better readability.

--- a/RSNA_HowTo.ipynb
+++ b/RSNA_HowTo.ipynb
@@ -166,15 +166,15 @@
    "source": [
     "A successful response should be received as below:\n",
     "\n",
-    "I: Requesting Association\n",
+    "> I: Requesting Association  ",
     "\n",
-    "I: Association Accepted (Max Send PDV: 16372)\n",
+    "> I: Association Accepted (Max Send PDV: 16372)  ",
     "\n",
-    "I: Sending Echo Request (MsgID 1)\n",
+    "> I: Sending Echo Request (MsgID 1)  ",
     "\n",
-    "I: Received Echo Response (Success)\n",
+    "> I: Received Echo Response (Success)  ",
     "\n",
-    "I: Releasing Association"
+    "> I: Releasing Association"
    ]
   },
   {
@@ -186,17 +186,17 @@
     "\n",
     "Orthanc PACS will be listening to DICOM connections at port 4242. To send images to Orthanc, it will need to be configured as a Target node in Mercure. Select the 'Targets' page in Mercure and click '+ Add New' to add a new target with the following settings:\n",
     "\n",
-    "Name: Orthanc\n",
+    "> Name: Orthanc  ",
     "\n",
-    "Type: DICOM\n",
+    "> Type: DICOM  ",
     "\n",
-    "Host/IP: 127.0.0.1\n",
+    "> Host/IP: 127.0.0.1  ",
     "\n",
-    "Port: 4242\n",
+    "> Port: 4242  ",
     "\n",
-    "AET Target: Orthanc\n",
+    "> AET Target: Orthanc  ",
     "\n",
-    "AET Source: mercure\n",
+    "> AET Source: mercure\n",
     "\n",
     "Click 'Save'"
    ]
@@ -270,7 +270,11 @@
    "source": [
     "To simplify deployment of the MONAI segmentation bundle, a Docker image has been created to run this application as a module in Mercure. This module is named 'mercure-monaisegment' and has been made available on Dockerhub. We will use this prebuilt Docker image in this deployment, if you  are interested in the code for this module, please visit this [address.](https://github.com/mercure-imaging/mercure-monaisegment) \n",
     "\n",
-    "Add this module to the Mercure installation by selecting the 'Modules' page and clicking '+ Install Module' Button. Provide a name for the module, enter the Docker tag for the mercure-monaisegment module as shown below (mercureimaging/mercure-monaisegment), and click 'Install'. Note that *Module Type* must be 'mercure' in this case (the default setting)."
+    "Add this module to the Mercure installation by selecting the 'Modules' page and clicking '+ Install Module' Button. Provide a name for the module and enter the following settings, and click 'Install'. Note that *Module Type* must be 'mercure' in this case (the default setting).",
+    "\n",
+    "> Docker tag: mercureimaging/mercure-monaisegment  ",
+    "\n",
+    "> Module type: mercure"
    ]
   },
   {
@@ -301,11 +305,11 @@
     "\n",
     "Select the 'Rules' page in Mercure and click '+ Add New' and provide an name such as 'monaisegment-rule'. Open the rule using the edit button and select the 'Filtering' tab to populate the fields as below and click 'Save' button :\n",
     "\n",
-    "Selection Rule = True\n",
+    "> Selection Rule = True  ",
     "\n",
-    "Action = Processing & Routing\n",
+    "> Action = Processing & Routing  ",
     "\n",
-    "Trigger = 'Completed Series'\n",
+    "> Trigger = 'Completed Series'  ",
     "\n",
     "\n",
     "The Filtering settings should look as in the image below, and will trigger processing and routing to be performed on all series sent to Mercure once all images in the series have been received.\n"
