RSNA tutorial updates

--- a/RSNA_HowTo.ipynb
+++ b/RSNA_HowTo.ipynb
@@ -25,7 +25,7 @@
     "- Python installed (2.7 | 3.5 | 3.6 | 3.7 | 3.8 | 3.9) - we recommend installing with jupyter notebooks using [anaconda](https://www.anaconda.com/download).\n",
     "- Git installed.\n",
     "- VirtualBox and Vagrant installed (see below).\n",
-    "- Offis DCMTK installed, available [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/) \n",
+    "- Offis DCMTK installed, available [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/) (executable binaries option recommended)\n",
     "- Roughly 22 GB of free disk space."
    ]
   },
@@ -77,7 +77,7 @@
     "Navigate to 'systemd' subdirectory of Mercure repository and install Mercure with vagrant. This step may take a few minutes (~20 mins) and will generate lots of output. The open-source Orthanc PACS server and a web-based DICOM viewer will be installed inside the virtual machine as well so we can view our results later.\n",
     "<br>\n",
     "\n",
-    "**Important:** Following commands must be run with **administrator privileges.**"
+    "**Important:** Following commands must be run with **administrator privileges.** (you may need to reissue commands if vagrant hangs on first boot)"
    ]
   },
   {
@@ -88,6 +88,13 @@
    "source": [
     "%cd mercure/addons/vagrant/systemd\n",
     "!vagrant --orthanc up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\"vagrant-disksize plugin missing\" warning :*** *If you see this message, you can add the option* ***--smaller-disk*** *to the above vagrant command or install the plugin by running* ***'vagrant plugin install vagrant-disksize'*** *command and then rerun the command above.*"
    ]
   },
   {
@@ -145,9 +152,9 @@
    "source": [
     "### 2.1 Install Offis DCMTK toolkit\n",
     "\n",
-    "We will send DICOM images to Mercure in this tutorial using the 'dcmsend' tool from the DCMTK tool kit which can be downloaded [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/)\n",
+    "We will send DICOM images to Mercure in this tutorial using the 'dcmsend' tool from the DCMTK tool kit which can be downloaded [here](https://dicom.offis.de/en/dcmtk/dcmtk-tools/) (executable binaries option recommended).\n",
     "\n",
-    "Once DCMTK is installed we verify connectivity using the command below.\n",
+    "Once DCMTK is installed we verify connectivity using the command below (you may need to specify full path to DCMTK install when running commands).\n",
     "\n"
    ]
   },
@@ -166,13 +173,13 @@
    "source": [
     "A successful response should be received as below:\n",
     "\n",
-    "> I: Requesting Association  ",
+    "> I: Requesting Association  \n",
     "\n",
-    "> I: Association Accepted (Max Send PDV: 16372)  ",
+    "> I: Association Accepted (Max Send PDV: 16372)  \n",
     "\n",
-    "> I: Sending Echo Request (MsgID 1)  ",
+    "> I: Sending Echo Request (MsgID 1)  \n",
     "\n",
-    "> I: Received Echo Response (Success)  ",
+    "> I: Received Echo Response (Success)  \n",
     "\n",
     "> I: Releasing Association"
    ]
@@ -186,15 +193,15 @@
     "\n",
     "Orthanc PACS will be listening to DICOM connections at port 4242. To send images to Orthanc, it will need to be configured as a Target node in Mercure. Select the 'Targets' page in Mercure and click '+ Add New' to add a new target with the following settings:\n",
     "\n",
-    "> Name: Orthanc  ",
+    "> Name: Orthanc  \n",
     "\n",
-    "> Type: DICOM  ",
+    "> Type: DICOM  \n",
     "\n",
-    "> Host/IP: 127.0.0.1  ",
+    "> Host/IP: 127.0.0.1  \n",
     "\n",
-    "> Port: 4242  ",
+    "> Port: 4242  \n",
     "\n",
-    "> AET Target: Orthanc  ",
+    "> AET Target: Orthanc  \n",
     "\n",
     "> AET Source: mercure\n",
     "\n",
@@ -270,9 +277,9 @@
    "source": [
     "To simplify deployment of the MONAI segmentation bundle, a Docker image has been created to run this application as a module in Mercure. This module is named 'mercure-monaisegment' and has been made available on Dockerhub. We will use this prebuilt Docker image in this deployment, if you  are interested in the code for this module, please visit this [address.](https://github.com/mercure-imaging/mercure-monaisegment) \n",
     "\n",
-    "Add this module to the Mercure installation by selecting the 'Modules' page and clicking '+ Install Module' Button. Provide a name for the module and enter the following settings, and click 'Install'. Note that *Module Type* must be 'mercure' in this case (the default setting).",
+    "Add this module to the Mercure installation by selecting the 'Modules' page and clicking '+ Install Module' Button. Provide a name for the module and enter the following settings, and click 'Install'. ***Note:*** *Module Type must be 'mercure' in this case (this is the default setting - ignore MONAI setting)*.\n",
     "\n",
-    "> Docker tag: mercureimaging/mercure-monaisegment  ",
+    "> Docker tag: mercureimaging/mercure-monaisegment  \n",
     "\n",
     "> Module type: mercure"
    ]
@@ -305,11 +312,11 @@
     "\n",
     "Select the 'Rules' page in Mercure and click '+ Add New' and provide an name such as 'monaisegment-rule'. Open the rule using the edit button and select the 'Filtering' tab to populate the fields as below and click 'Save' button :\n",
     "\n",
-    "> Selection Rule = True  ",
+    "> Selection Rule = True  \n",
     "\n",
-    "> Action = Processing & Routing  ",
+    "> Action = Processing & Routing  \n",
     "\n",
-    "> Trigger = 'Completed Series'  ",
+    "> Trigger = 'Completed Series'  \n",
     "\n",
     "\n",
     "The Filtering settings should look as in the image below, and will trigger processing and routing to be performed on all series sent to Mercure once all images in the series have been received.\n"
@@ -546,6 +553,13 @@
    "outputs": [],
    "source": [
     "!vagrant halt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, if you wish to remove the vagrant machine, the 'vagrant destroy' command can be used."
    ]
   }
  ],
