--- a/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
+++ b/mercure_demonstration-RSNA2023_Rapid_Deployment_How-To.ipynb
@@ -18,14 +18,15 @@
    "source": [
     "\n",
     "\n",
-    "This notebook contains a demonstration of how to rapidly deploy a spleen segmentation model using [Mercure](https://mercure-imaging.org) - a DICOM orchestration platform, and forms part of edcucational exhibit INEE-47 at RSNA 2023 annual meeting. A [MONAI](https://monai.io/) **CT spleen segmentation model** will be deployed from the MONAI [model zoo](https://monai.io/model-zoo.html) using **mercure** in **six simple steps**. This demonstration includes instructions on how to quickly set up a test installation of Mercure in a virtual environment with [virtual box](https://www.virtualbox.org/) and [vagrant](https://www.vagrantup.com/). Next, we will step through how to deploy and configure a spleen segmentation app ( based on a [previous tutorial](https://docs.monai.io/projects/monai-deploy-app-sdk/en/stable/getting_started/tutorials/monai_bundle_app.html) provided by MONAI ) to receive and process files using Mercure. Finally, we will test the deployed app by sending open-source data and viewing segmentation results.\n",
+    "This notebook contains a demonstration of how to rapidly deploy a spleen segmentation model using [Mercure](https://mercure-imaging.org) - a DICOM orchestration platform, and forms part of educational exhibit INEE-47 at RSNA 2023 annual meeting. A [MONAI](https://monai.io/) **CT spleen segmentation model** will be deployed from the MONAI [model zoo](https://monai.io/model-zoo.html) using **mercure** in **six simple steps**. This demonstration includes instructions on how to quickly set up a test installation of Mercure in a virtual environment with [VirtualBox](https://www.virtualbox.org/) and [vagrant](https://www.vagrantup.com/). Next, we will step through how to deploy and configure a spleen segmentation app (based on a [previous tutorial](https://docs.monai.io/projects/monai-deploy-app-sdk/en/stable/getting_started/tutorials/monai_bundle_app.html) provided by MONAI) to receive and process files using Mercure. Finally, we will test the deployed app by sending open-source data and viewing segmentation results.\n",
     "\n",
     "### Requirements\n",
     "- Notebook is Linux/macOS/Windows compatible and needs to be downloaded and run locally.\n",
     "- Python installed (2.7 | 3.5 | 3.6 | 3.7 | 3.8 | 3.9) - we recommend installing with jupyter notebooks using [anaconda](https://www.anaconda.com/download).\n",
     "- Git installed.\n",
-    "- VirtualBox and Vagrant installed (see below ).\n",
-    "- Offis DCMTK installed, available [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/)"
+    "- VirtualBox and Vagrant installed (see below).\n",
+    "- Offis DCMTK installed, available [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/) (executable binaries option recommended)\n",
+    "- Roughly 22 GB of free disk space."
    ]
   },
   {
@@ -41,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Install Virtual Box and Vagrant\n",
+    "### 1.1 Install VirtualBox and Vagrant\n",
     "\n",
     "Vagrant is an open-source tool for automatically creating and provisioning virtual machines. It is used in in this tutorial to simplify Mercure installation and setup. To begin, install VirtualBox followed by Vagrant at the links provided below :\n",
     "\n",
@@ -73,10 +74,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Navigate to 'systemd' subdirectory of Mercure repository and install Mercure with vagrant. This step may take a few minutes (~20 mins) and will generate lots of output. The open-source Orthanc PACS and DICOM viewer will be installed so we can view our results later.\n",
+    "Navigate to 'systemd' subdirectory of Mercure repository and install Mercure with vagrant. This step may take a few minutes (~20 mins) and will generate lots of output. The open-source Orthanc PACS server and a web-based DICOM viewer will be installed inside the virtual machine as well so we can view our results later.\n",
     "<br>\n",
     "\n",
-    "**Important:** Following commands must be run with **administrator privileges.**"
+    "**Important:** Following commands must be run with **administrator privileges.** (you may need to reissue commands if vagrant hangs on first boot)"
    ]
   },
   {
@@ -90,12 +91,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\"vagrant-disksize plugin missing\" warning :*** *If you see this message, you can add the option* ***--smaller-disk*** *to the above vagrant command or install the plugin by running* ***'vagrant plugin install vagrant-disksize'*** *command and then rerun the command above.*"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Mercure should now be running inside a virtual machine and accessible from your host computer. To view the Mercure login screen open address [127.0.0.1:8000](http://127.0.0.1:8000/) in a web browser. \n",
-    "The credentials for first login are : **Username = admin, Password = router**. A prompt to add email contact and change password will follow."
+    "The credentials for first login are: **Username = admin, Password = router**. A prompt to add email contact and change password will follow."
    ]
   },
   {
@@ -144,9 +152,9 @@
    "source": [
     "### 2.1 Install Offis DCMTK toolkit\n",
     "\n",
-    "We will send DICOM images to Mercure in this tutorial using the 'dcmsend' tool from the DCMTK tool kit which can be downloaded [here.](https://dicom.offis.de/en/dcmtk/dcmtk-tools/)\n",
+    "We will send DICOM images to Mercure in this tutorial using the 'dcmsend' tool from the DCMTK tool kit which can be downloaded [here](https://dicom.offis.de/en/dcmtk/dcmtk-tools/) (executable binaries option recommended).\n",
     "\n",
-    "Once DCMTK is installed we verify connectivity using the command below.\n",
+    "Once DCMTK is installed we verify connectivity using the command below (you may need to specify full path to DCMTK install when running commands).\n",
     "\n"
    ]
   },
@@ -165,15 +173,15 @@
    "source": [
     "A successful response should be received as below:\n",
     "\n",
-    "I: Requesting Association\n",
+    "> I: Requesting Association  \n",
     "\n",
-    "I: Association Accepted (Max Send PDV: 16372)\n",
+    "> I: Association Accepted (Max Send PDV: 16372)  \n",
     "\n",
-    "I: Sending Echo Request (MsgID 1)\n",
+    "> I: Sending Echo Request (MsgID 1)  \n",
     "\n",
-    "I: Received Echo Response (Success)\n",
+    "> I: Received Echo Response (Success)  \n",
     "\n",
-    "I: Releasing Association"
+    "> I: Releasing Association"
    ]
   },
   {
@@ -185,17 +193,17 @@
     "\n",
     "Orthanc PACS will be listening to DICOM connections at port 4242. To send images to Orthanc, it will need to be configured as a Target node in Mercure. Select the 'Targets' page in Mercure and click '+ Add New' to add a new target with the following settings:\n",
     "\n",
-    "Name: Orthanc\n",
+    "> Name: Orthanc  \n",
     "\n",
-    "Type: DICOM\n",
+    "> Type: DICOM  \n",
     "\n",
-    "Host/IP: 127.0.0.1\n",
+    "> Host/IP: 127.0.0.1  \n",
     "\n",
-    "Port: 4242\n",
+    "> Port: 4242  \n",
     "\n",
-    "AET Target: Orthanc\n",
+    "> AET Target: Orthanc  \n",
     "\n",
-    "AET Source: mercure\n",
+    "> AET Source: mercure\n",
     "\n",
     "Click 'Save'"
    ]
@@ -237,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check that you can open the Orthanc interface (Username = orthanc, Password = orthanc) in a web browser at the following address :\n",
+    "Check that you can open the Orthanc interface (Username = orthanc, Password = orthanc) in a web browser at the following address:\n",
     "\n",
     "Orthanc: [127.0.0.1:8042](http://127.0.0.1:8042)\n"
    ]
@@ -269,7 +277,11 @@
    "source": [
     "To simplify deployment of the MONAI segmentation bundle, a Docker image has been created to run this application as a module in Mercure. This module is named 'mercure-monaisegment' and has been made available on Dockerhub. We will use this prebuilt Docker image in this deployment, if you  are interested in the code for this module, please visit this [address.](https://github.com/mercure-imaging/mercure-monaisegment) \n",
     "\n",
-    "Add this module to the Mercure installation by selecting the 'modules' page and clicking '+ Install Module' Button. Provide a name for the module, enter the Docker tag for the mercure-monaisegment module as shown below (mercureimaging/mercure-monaisegment), and click 'Install'."
+    "Add this module to the Mercure installation by selecting the 'Modules' page and clicking '+ Install Module' Button. Provide a name for the module and enter the following settings, and click 'Install'. ***Note:*** *Module Type must be 'mercure' in this case (this is the default setting - ignore MONAI setting)*.\n",
+    "\n",
+    "> Docker tag: mercureimaging/mercure-monaisegment  \n",
+    "\n",
+    "> Module type: mercure"
    ]
   },
   {
@@ -300,11 +312,11 @@
     "\n",
     "Select the 'Rules' page in Mercure and click '+ Add New' and provide an name such as 'monaisegment-rule'. Open the rule using the edit button and select the 'Filtering' tab to populate the fields as below and click 'Save' button :\n",
     "\n",
-    "Selection Rule = True\n",
+    "> Selection Rule = True  \n",
     "\n",
-    "Action = Processing & Routing\n",
+    "> Action = Processing & Routing  \n",
     "\n",
-    "Trigger = 'Completed Series'\n",
+    "> Trigger = 'Completed Series'  \n",
     "\n",
     "\n",
     "The Filtering settings should look as in the image below, and will trigger processing and routing to be performed on all series sent to Mercure once all images in the series have been received.\n"
@@ -541,6 +553,13 @@
    "outputs": [],
    "source": [
     "!vagrant halt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, if you wish to remove the vagrant machine, the 'vagrant destroy' command can be used."
    ]
   }
  ],
